--- a/Techno1/templates/contact.html
+++ b/Techno1/templates/contact.html
@@ -131,7 +131,7 @@
 
 
 <div class="contact">
-    <form action="" method="post">
+    <form action="" method="POST">
         {% csrf_token %}
         <h3>Zakazingizni parametrlarini kiriting</h3>
         <span  data-aos="fade-right">Ism va Famiyangiz</span>
