--- a/Techno1/templates/blog.html
+++ b/Techno1/templates/blog.html
@@ -138,7 +138,7 @@
 
         <div class="box" data-aos="fade-down-left">
             <div class="image"  data-aos="fade-down-right">
-                <img src="image/YANGI DO`KON 1.jpg" alt="">
+                <img src="{% static 'image/YANGID.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -153,7 +153,7 @@
         
         <div class="box" data-aos="flip-up">
             <div class="image" data-aos="flip-down" >
-                <img src="image/8809150ca2c74b6885946cda.jpg" alt="">
+                <img src="{% static 'image/8809150ca2c74b6885946cda.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -168,7 +168,7 @@
 
         <div class="box" data-aos="fade-down-right">
             <div class="image"  data-aos="fade-down-left">
-                <img src="image/Н.jpg" alt="">
+                <img src="{% static 'image/Н.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -183,7 +183,7 @@
 
         <div class="box" data-aos="fade-down-left">
             <div class="image"  data-aos="fade-down-right">
-                <img src="image/Y.jpg" alt="">
+                <img src="{% static 'image/Y.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -198,7 +198,7 @@
         
         <div class="box" data-aos="flip-up">
             <div class="image" data-aos="flip-down" >
-                <img src="image/GOLD 3.jpg" alt="">
+                <img src="{% static 'image/GOLD 3.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -213,7 +213,7 @@
 
         <div class="box" data-aos="fade-down-right">
             <div class="image"  data-aos="fade-down-left">
-                <img src="image/1.jpg" alt="">
+                <img src="{% static 'image/1.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -227,7 +227,7 @@
         </div>
         <div class="box" data-aos="fade-down-left">
             <div class="image"  data-aos="fade-down-right">
-                <img src="image/COFFE 1 (2).jpg" alt="">
+                <img src="{% static 'image/COFFE1.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -242,7 +242,7 @@
         
         <div class="box" data-aos="flip-up">
             <div class="image" data-aos="flip-down" >
-                <img src="image/MO`YKA .jpg" alt="">
+                <img src="{% static 'image/M.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
@@ -257,7 +257,7 @@
 
         <div class="box" data-aos="fade-down-right">
             <div class="image"  data-aos="fade-down-left">
-                <img src="image/8809150ca2c74b6885946cda.jpg" alt="">
+                <img src="{% static 'image/8809150ca2c74b6885946cda.jpg' %}" alt="">
             </div>
             <div class="content">
                 <h3>blog title goes here...</h3>
