--- a/Techno1/templates/contact.html
+++ b/Techno1/templates/contact.html
@@ -43,12 +43,12 @@
 <!-- navbar  -->
 
 <nav class="navbar">
-    <a href="{% static 'home.html' %}">home</a>
-    <a href="{% static 'shop.html' %}">shop</a>
-    <a href="{% static 'about.html' %}">about</a>
-    <a href="{% static 'team.html' %}">team</a>
-    <a href="{% static 'blog.html' %}">blog</a>
-    <a href="{% static 'contact.html' %}">contact</a>
+    <a href="{% url 'home' %}">home</a>
+    <a href="{% url 'shop' %}">shop</a>
+    <a href="{% url 'about' %}'">about</a>
+    <a href="{% url 'team' %}">team</a>
+    <a href="{% url 'blog' %}">blog</a>
+    <a href="{% url 'contact' %}">contact</a>
 </nav>
 
 <!-- shopping cart  -->
