--- a/Techno1/templates/home.html
+++ b/Techno1/templates/home.html
@@ -43,12 +43,12 @@
 <!-- navbar  -->
 
 <nav class="navbar">
-    <a href="home/" >home</a>
-    <a href="shop/" >shop</a>
-    <a href="about/" >about</a>
-    <a href="team/" >team</a>
-    <a href="blog/" >blog</a>
-    <a href="contact/" >contact</a>
+    <a href="{% url 'home' %}">home</a>
+    <a href="{% url 'shop' %}">shop</a>
+    <a href="{% url 'about' %}'">about</a>
+    <a href="{% url 'team' %}">team</a>
+    <a href="{% url 'blog' %}">blog</a>
+    <a href="{% url 'contact' %}">contact</a>
 </nav>
 
 <!-- shopping cart  -->
