--- a/Techno1/templates/shop.html
+++ b/Techno1/templates/shop.html
@@ -43,12 +43,12 @@
 <!-- navbar  -->
 
 <nav class="navbar">
-    <a href="home.html">home</a>
-    <a href="shop.html">shop</a>
-    <a href="about.html">about</a>
-    <a href="team.html">team</a>
-    <a href="blog.html">blog</a>
-    <a href="contact.html">contact</a>
+    <a href="{% url 'home' %}">home</a>
+    <a href="{% url 'shop' %}">shop</a>
+    <a href="{% url 'about' %}'">about</a>
+    <a href="{% url 'team' %}">team</a>
+    <a href="{% url 'blog' %}">blog</a>
+    <a href="{% url 'contact' %}">contact</a>
 </nav>
 
 <!-- shopping cart  -->
